# DupNames

./: CMakeLists.txt  DupCompare.cpp  DupCompare.h  DupNames.code-workspace  DupNames.cpp  DupNames.h  DupNames.ini  IniFile.cpp  IniFile.h  README.md  ScrUtil.cpp  ScrUtil.h
